@@ -1,60 +1,60 @@
 package com.rental.transport.service;
 
 import com.rental.transport.entity.ImageEntity;
-import com.rental.transport.entity.ImageRepository;
+import com.rental.transport.repository.ImageRepository;
 import com.rental.transport.utils.exceptions.ObjectNotFoundException;
-import java.util.List;
-import java.util.stream.Collectors;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import java.util.List;
+import java.util.UUID;
+
 @Service
+@RequiredArgsConstructor
 public class ImageService {
 
-    @Autowired
-    private ImageRepository imageRepository;
+    private final ImageRepository imageRepository;
 
-    public Long create(byte[] data) {
+    public UUID create(byte[] data) {
 
         ImageEntity entity = new ImageEntity(data);
         return imageRepository.save(entity).getId();
     }
 
-    public void delete(List<Long> ids) {
+    public void delete(List<UUID> ids) {
 
-        ids.forEach(id -> imageRepository.deleteById(id));
+        ids.forEach(imageRepository::deleteById);
     }
 
-    public byte[] getImage(Long id) throws ObjectNotFoundException {
+    public byte[] getImage(UUID id) throws ObjectNotFoundException {
 
         ImageEntity entity = getEntity(id);
-        return entity.getData();
+        return entity.getBody();
     }
 
-    public List<Long> getPage(Pageable pageable) {
+    public List<UUID> getPage(Pageable pageable) {
 
         return imageRepository
                 .findAll(pageable)
                 .getContent()
-                .parallelStream()
+                .stream()
                 .map(ImageEntity::getId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public ImageEntity getEntity(Long id) throws ObjectNotFoundException {
+    public ImageEntity getEntity(UUID id) throws ObjectNotFoundException {
 
         return imageRepository
                 .findById(id)
                 .orElseThrow(() -> new ObjectNotFoundException("Image", id));
     }
 
-    public String getStringImage(Long id) throws ObjectNotFoundException {
+    public String getStringImage(UUID id) throws ObjectNotFoundException {
 
         byte[] image = getImage(id);
         Long count = 0L;
         for (byte b : image) { count++; }
-        System.out.println(image.length + " " + count);
         return new String(image);
     }
 }
